<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants"
    android:focusable="false"
    android:focusableInTouchMode="false">

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/recipe_ingredient"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:text="@string/ingredient"
        android:textSize="30sp">
    </Button>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#dadada"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp" />

    <ListView
        android:id="@+id/recipe_steps_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp" />

</LinearLayout>